waltid-verifier/k8s/deployment-dev.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier
  template:
    metadata:
      labels:
        app: verifier
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: verifier
          image: waltid/verifier:dev
          volumeMounts:
            - name: verifier-web-config
              mountPath: "/waltid-verifier/config/"
              readOnly: true
            - name: verifier-data
              mountPath: "/waltid-verifier/data/"
          ports:
            - containerPort: 3000
              name: http-api
      volumes:
        - name: verifier-data
          persistentVolumeClaim:
            claimName: verifier-data-volume-claim
        - name: verifier-web-config
          configMap:
            name: verifier-web-config
---
kind: Service
apiVersion: v1
metadata:
  name: verifier
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: verifier
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - verifier.portal.walt-test.cloud
      secretName: verifier-tls-secret
  rules:
    - host: verifier.portal.walt-test.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier
                port:
                  name: http
